updated by mohan

--- a/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
@@ -299,10 +299,11 @@ fieldset {
 	background-color:#E4EDF0;
 }
 
+/*
 #usergroupsCategoryViewDiv , #userGroupsDetailsViewDiv
 {
 	height:200px;
-}
+}*/
 
 #usergroupsCategoryViewDiv_outer
 {
