updated by mohan

--- a/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
@@ -278,8 +278,7 @@ fieldset {
 }
 #influencingPeopleDtDiv
 {
-	width:610px;
-	overflow:scroll;
+	overflow:auto;
 }
 .yui-skin-sam .yui-panel .hd 
 {
