Inbox Implementation for Connection People By Sivakuamr

--- a/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
@@ -248,3 +248,14 @@
 	font-weight:bold;
 	margin-top:10px;
 }
+.msgDiv_head
+{
+	cursor:pointer;
+}
+
+.msgDiv_body
+{
+	background-color:#DFDFDF;	
+	margin:0 5px;
+	padding:10px;
+}
