--- a/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
@@ -76,7 +76,7 @@
 
 #alliancePartiesCarousel .yui-carousel-element li
 {
-	height:400px;
+	height:360px;
 	width:580px;
 }
 
@@ -122,7 +122,7 @@
 	color:#4B74C6;
 	font-weight:bold;
 	padding:11px;
-
+	height:14px;
 }
 
 #mandalsDiv_main,#delimitMandalsDiv_main
@@ -178,6 +178,7 @@
 	width:268px;
 	overflow:auto;
 	height:100px;
+	width:279px;
 }
 
 #newConstDiv_body
