Analyze Page Interactive Charts  - sai

--- a/partyanalyst/trunk/src/main/webapp/styles/ElectionsReslutsPage/datatable.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/ElectionsReslutsPage/datatable.css
@@ -18,28 +18,30 @@ version: 2.8.0r4
 .yui-dt-resizerproxy{visibility:hidden;position:absolute;z-index:9000;background-color:#CCC;opacity:0;filter:alpha(opacity=0);}
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer{display:none;}
 .yui-dt-editor{position:absolute;z-index:9000;}
-.yui-skin-sam .yui-dt table{
+.yui-skin-sam .yui-dt table {
 	border:2px solid #9696C0;
 	border-collapse:separate;
 	border-spacing:0;
-	font-family:arial;
-	font-size:12px;
+	color:CornflowerBlue;
+	font-family:Times New Roman;
+	font-size:13px;
+	font-weight:bold;
 	margin:0;
 	padding:0;
 	width:100%;
-	}
+}
 .yui-skin-sam .yui-dt thead{border-spacing:0;}
-.yui-skin-sam .yui-dt caption{
+.yui-skin-sam .yui-dt caption {
 	background-image:url(../../images/icons/electionResultsReport/table_head.png);
-	color:#000000;
-	font-family:MS Sans-serif;
-	font-size:14px;
+	color:DimGray;
+	font-family:Trebuchet MS;
+	font-size:15px;
 	font-weight:bold;
 	height:30px;
 	line-height:1;
 	padding:0.5em 0;
 	text-align:center;
-	}
+}
 .yui-skin-sam .yui-dt th{
 	background:#B7D3FC;
 	}
