--- a/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
@@ -76,8 +76,8 @@
 
 #alliancePartiesCarousel .yui-carousel-element li
 {
-	height:360px;
-	width:580px;
+	height:400px;
+	width:900px;
 }
 
 #alliancePartiesCarousel .yui-carousel-item-selected 
@@ -143,7 +143,7 @@
 	border-bottom:1px solid #E0E0D6;
 	width:313px;
 	overflow:auto;
-	height:100px;
+	height:310px;
 }
 
 #districtPageRoundedFooter_center
@@ -372,8 +372,8 @@
 
 #districtPeopleConnect_main
 {
-	margin-left:10px;
-	margin-right:20px
+	/*margin-left:10px;
+	margin-right:20px*/
 }
 
 #districtPeopleConnect_body
@@ -381,7 +381,7 @@
 	border-bottom:1px solid #E0E0D6;
 	border-left:1px solid #E0E0D6;
 	border-right:1px solid #E0E0D6;
-	height:250px
+	height:313px
 }
 
 #connectPeoplePopup_outer .yui-panel
