election results analysis report changes with Impact value -Mohan

--- a/partyanalyst/trunk/src/main/webapp/styles/ElectionResultsAnalysisReport/electionResultsAnalysisReport.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/ElectionResultsAnalysisReport/electionResultsAnalysisReport.css
@@ -323,6 +323,12 @@ margin:1px;
 	padding-top:5px;
 }
 
+.reasonsAnalysis th
+{
+	color:#313C4B;
+	padding:5px;
+}
+
 .reasonsAnalysis td
 {
 	padding:5px;
