--- a/partyanalyst/trunk/src/main/webapp/styles/ElectionResultsAnalysisReport/partyElectionResultsReport.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/ElectionResultsAnalysisReport/partyElectionResultsReport.css
@@ -51,3 +51,38 @@ font-size:12px;
 padding:5px;
 font-weight:bold;
 }
+
+.commentContent_candidate_table th
+{
+	padding:5px;
+	font-size:12px;
+	color:#39342E;
+}
+
+.commentContent_comment
+{
+	padding:7px;
+}
+
+.commentsDetailsLabel
+{
+	color:#04325A;
+	font-size:11px;
+	font-weight:bold;
+	text-decoration:underline;
+	font-size:12px;
+	height:25px;
+}
+
+.noCommentFont
+{
+	color:#39342E;
+	font-size:12px;
+}
+
+.commentContentTable td
+{
+	color:#39342E;
+	font-size:12px;
+	padding:5px;
+}
