--- a/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
@@ -1167,6 +1167,13 @@ text-decoration:none;
 	background-image:url('../../images/icons/homePage_new/accordianHeader.jpeg');
 }
 
+.ui-state-hover
+{
+	color:#FFFFFF;
+	background-image:url('../../images/icons/homePage_new/accordianHeader_selected.jpg');
+	font-weight:bold;
+}
+
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited
 {
 	color:#FFFFFF;
@@ -1174,11 +1181,15 @@ text-decoration:none;
 
 .ui-accordion-icons .ui-accordion-header a
 {
-	padding:3px;
+	padding:5px;
 	padding-left:2.2em;
+	font-size:11px;
+	font-weight:bold;
 }
 
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited 
 {
-	color:#DBA231;
+	color:#FFFFFF;
+	background-image:url('../../images/icons/homePage_new/accordianHeader_selected.jpg');
+	font-weight:bold;
 }
