Cadre Upload Fixes - sai krishna

--- a/partyanalyst/trunk/src/main/webapp/styles/cadreManagement/cadreManagement.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/cadreManagement/cadreManagement.css
@@ -116,14 +116,15 @@
 	}
 
 	
-	#cadreSMSBodyDiv
+	#cadreSMSBodyDiv,#cadreGroupsBodyDiv
 	{
 		height:90px;
 		line-height:20px;
 		padding:5px;
 		text-align:justify;
 	}
-	#cadreSMSFooterDiv
+    
+	#cadreSMSFooterDiv,#cadreGroupsFooterDiv
 	{
 		padding:5px;
 		text-align:right;		
