view features pop up in ViewFeatures page - Kamalakar

--- a/partyanalyst/trunk/src/main/webapp/styles/viewFeatures/viewFeatures.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/viewFeatures/viewFeatures.css
@@ -138,3 +138,21 @@ body
 {
 	text-align:right;
 }
+
+.contentPopup_main
+{
+
+}
+
+.contentPopup_head
+{
+
+}
+
+.contentPopup_body
+{
+	text-align:justify;
+	color:#732AB2;
+	font-weight:bold;
+	font-size:12px;
+}
