--- a/partyanalyst/trunk/src/main/webapp/styles/statePage/statePage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/statePage/statePage.css
@@ -71,14 +71,20 @@ table.stateResultsTable td {
 
 /* State Page New Layout Styles*/
 
+#statePage_header
+{
+	background-color:#FFFFFF;
+	padding:10px;
+}
+
 #statePageHeading 
 {
-	background-image:url("../../images/icons/statePage/header_body.png");
+	background-image:url("../../images/icons/electionResultsAnalysisReport/mid.png");
 	background-repeat:repeat-x;
 	color:#1C4B7A;
 	font-size:15px;
 	font-weight:bold;
-	height:35px;
+	height:30px;
 }
 
 #stateNameSpan
