UI changes - Mohan

--- a/partyanalyst/trunk/src/main/webapp/styles/indexPage/indexPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/indexPage/indexPage.css
@@ -176,7 +176,7 @@ a:hover
 
 .centerSwasthicImage
 {
-	background-image:url("../../images/icons/indexPage/swasthic_body.png");	
+	background-image:url(../../images/icons/electionResultsAnalysisReport/mid.png);
 	height:30px;
 }
 
